# puzzle33

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
models/ViT/: deep_perm_net.onnx
notebooks/: training_ViT.ipynb  training_colab.ipynb
scripts/: prepare_data.py  push_to_drive.sh
src/: colab_train.py  data_pipeline.py  dataset.py  evaluate.py  main.py  model.py  train.py  visualize.py
streamlit_app/: app.py  model.py  requirements.txt  solver.py  utils.py
