[project]
name = "puzzle33"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=2.14.0",
    "matplotlib>=3.7.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "onnx>=1.14.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.1.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.0.0",
    "pytorch-lightning>=2.0.0",
    "streamlit>=1.58.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
